--- a/index.html
+++ b/index.html
@@ -3,23 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfólio do Gusta F</title>
 </head>
 <body>
-    <header class="container">
-    <img src="img/avatar gusta.jpg" alt="avatar do Gustavo" srcset="">
-    <p>Eu sou Gustavo Fávero_</p>
+    <header class="container text-center">
+    <img src="img/avatar gusta.jpg" alt="avatar do Gustavo" class="rounded-circle" width="200" height="200" srcset="">
+    <p class="lead">Eu sou Gustavo Fávero_</p>
     <h1>Eu estou aprendendo programação na Alura</h1>
     <p>Eu sou estudante da escola Antonio Berreta em Itu-SP. Meu projeto de vida é ser programador, estudo na Alura e em meus cursos T.I e Programação e gosto muito de fazer projetos por conta própria</p>
     <p>Minhas habilidades são:</p>
     <div>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <P>HTML</P>
-        <p>Scratch</p>
+        <p class="badge bg-secondary">HTML</p>
+        <p class="badge bg-secondary">CSS</p>
+        <p class="badge bg-secondary">JavaScript</p>
+        <p class="badge bg-secondary">Scratch</p>
     </div>
 </header>
+<main class="container">
+    <h2>Meus Projetos</h2>
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img src="img/MONALISA.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Monalisa/Jason Voorhees</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+              <a href="#" class="btn btn-primary">Ver de Perto</a>
+            </div>
+          </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img src="img/Esfera 3D.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Esfera 3D</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+              <a href="#" class="btn btn-primary">Ver de Perto</a>
+            </div>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/PROJETO DE CORRIDA.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Jogo de Corrida</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                      <a href="#" class="btn btn-primary">Ver de Perto</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/Recomendador de filmes.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Recomendador de filmes</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                          <a href="#" class="btn btn-primary">Ver de Perto</a>
+                        </div>
+                      </div>
+
+          </div>
+
+
+
+</main>
 </body>
 </html>
